--- a/site/src/main/webapp/WEB-INF/view/hello1.html
+++ b/site/src/main/webapp/WEB-INF/view/hello1.html
@@ -20,11 +20,9 @@
 <body >
 <ul class="nav nav-pills">
     <li class="active"><a href="#">Home</a></li>
-    <li><a th:href="${'/test/hello1'}">Profile</a></li>
+    <li><a href="#">Profile</a></li>
     <li><a href="#">Messages</a></li>
 </ul>
-
-<iframe th:src="@{/welcome}" style="position: absolute;float:none;" frameborder="0"></iframe>
 
 </body>
 <script type="text/javascript" th:inline="javascript">
